# tl-jockey

./: .gitignore  Contributing-Guide.md  Procfile  README.md  compose.yaml  config.py  example.env  langgraph.json  launch_langgraph.sh  package.json  pyproject.toml  requirements.txt  run_local_server.sh  server.js  tailwind.config.js
docs/: architecture.md  customize-jockey.md  front-end.md  langgraph-api-server.md  reference-library.md  support.md  troubleshooting.md
frontend/: .eslintrc.js  README.md  example.env  package.json  requirements.txt  server.js  tailwind.config.js  tsconfig.json
frontend/jockey/: jockey.py  util.py
frontend/proxy/: launch.py
frontend/public/: index.html
frontend/src/: index.css  reportWebVitals.ts
frontend/src/apis/: apiConfig.js  apiKeys.js  (+5 more)
jockey/: .gitignore  README.md  Readme.md  __main__.py  app.py  cli.py  client.ipynb  compose.yaml  example.env  interfaces.py  jockey.py  jockey_default_server.py  jockey_dev_example.py  jockey_graph.py  jockey_tools.py  langgraph.json  launch.py  model_config.py  pyproject.toml  requirements.txt  ruff.toml  thread.py  util.py  video_utils.py
jockey/experimental/: jockey_graph.py
jockey/jockey/: __init__.py  app.py  cli.py  jockey_graph.py  util.py
jockey/jockey/prompts/: __init__.py  planner.md  supervisor.md  video_editing.md  video_text_generation.md
jockey/jockey/stirrups/: video_editing.py  video_search.py
jockey/prompts/: generic.txt  instructor.md  jockey_base.md  jockey_base.txt  planner.md  reflect.md  supervisor.md  video_editing.md  video_search.md  video_search.txt  video_text_generation.md  video_truncation.txt
jockey/spaces/: __init__.py  main.py  spaces.py
jockey/stirrups/: __init__.py  errors.py  stirrup.py  video_editing.py  video_search.py  video_text_generation.py
jockey/tests/: test_cli.py  test_jockey_graph.py  test_stirrup.py  test_video_editing.py
public/: index.html
src/: App.tsx  index.css
src/apis/: apiConfig.js  hooks.js  hooks.ts  keys.js  streamEventsApis.js  useVideoUpload.tsx
src/constants/: index.ts
src/helpers/: helpers.tsx  updateChatPanelMessages.tsx
src/icons/: CustomUpload.tsx  DeleteIcon.tsx
src/info/: answers.json
src/server/: serverConfig.ts
src/skeletons/: SkeletonChatVideoCard.tsx
src/types/: messageTypes.ts
src/utils/: formatTime.ts
(+194 files in other folders)
