[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jockey"
version = "0.0.1"
description = "Jockey is a conversational video agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Travis Couture", email = "travis@twelvelabs.io" }
]
urls = { "Homepage" = "https://github.com/twelvelabs-io/tl-jockey/" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# grab from requirements.txt
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools.packages.find]
where = ["."]
exclude = ["requirements.txt", "client.ipynb", ".env"]

[tool.setuptools.package-data]
"*" = ["assets/*"]
jockey = ["prompts/*.md", "config/*", "pyproject.toml"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["jockey/tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function" # maybe module will try this first 
